Refactor GameApp and card classes to streamline game flow and enhance functionality. Introduce GameMediator for managing game state and player interactions. Update card effect methods to remove unnecessary parameters and ensure proper mediator integration. Remove Dealer class and consolidate dealing logic within GameMediator. Improve player handling and game setup processes for a more cohesive gameplay experience.